# supabar

./: .gitignore  Cargo.toml  flake.nix  package.json  rust-toolchain.toml  todo.txt  workspace.code-workspace
apps/supabar/: Cargo.toml
apps/supabar/src/: main.rs  repl.rs
core/: Cargo.toml
core/src/: lib.rs  test.srctrldb  test.srctrlprj
core/src/config/: mod.rs
core/src/database/: mod.rs
core/src/modes/: mod.rs
core/src/user_state/: mod.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/core/: Cargo.toml  schema.prisma
crates/core/migrations/20220521003750_new/: migration.sql
crates/core/migrations/20220521004654_users/: migration.sql
crates/core/migrations/20220521011343_hostname/: migration.sql
crates/core/migrations/20220521021007_home/: migration.sql
crates/core/src/: lib.rs  prisma.rs
crates/core/src/database/: mod.rs
crates/core/src/entities/: job.rs  mod.rs
crates/core/src/job/: jobs.rs  mod.rs  worker.rs
crates/core/src/local_info/: mod.rs
crates/core/src/logging/: mod.rs
crates/core/src/runtime/: mod.rs
crates/core/src/user/: index.rs  mod.rs
crates/core/src/user_settings/: mod.rs
crates/core/src/user_state/: mod.rs
crates/indexers/: Cargo.toml
crates/indexers/application/: Cargo.toml
crates/indexers/application/src/: common.rs  lib.rs
crates/indexers/application/src/apps/: mac.rs  mod.rs
crates/indexers/csv/: Cargo.toml
crates/indexers/csv/benches/: csv_benchmark.rs
crates/indexers/csv/src/: csv_indexer.rs
crates/indexers/docx/: Cargo.toml
crates/indexers/docx/src/: docx_indexer.rs
crates/indexers/exif/: Cargo.toml
crates/indexers/exif/benches/: exif_benchmark.rs
crates/indexers/exif/src/: exif_indexer.rs
crates/indexers/mobile_net_v2/: Cargo.toml
crates/indexers/mobile_net_v2/benches/: mobile_net_v2_benchmark.rs
crates/indexers/mobile_net_v2/src/: mobile_net_v2_indexer.rs
crates/indexers/pdf/: Cargo.toml
crates/indexers/pdf/benches/: pdf_benchmark.rs
crates/indexers/pdf/src/: pdf_indexer.rs
crates/indexers/pptx/: Cargo.toml
crates/indexers/pptx/benches/: pptx_benchmark.rs
crates/indexers/pptx/src/: pptx_indexer.rs
crates/indexers/spreadsheet/: Cargo.toml
crates/indexers/spreadsheet/benches/: spreadsheet_benchmark.rs
crates/indexers/spreadsheet/src/: spreadsheet_indexer.rs
crates/indexers/src/: lib.rs
crates/indexers/text/: Cargo.toml
crates/indexers/text/benches/: text_benchmark.rs
crates/indexers/text/src/: text_indexer.rs
crates/store/: Cargo.toml
crates/store/fixtures/: file.txt  test.txt  yugioh.txt
crates/store/src/: lib.rs  store.rs
examples/: cmd.rs  hint.rs
gui/frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
gui/frontend/src/: app.html
gui/frontend/src/routes/: SearchBox.svelte  about.svelte  index.svelte  term.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
src/: application.rs  lib.rs
src/config/: mod.rs
src/database/: mod.rs
src/jobs/: mod.rs
src/modes/: mod.rs
src/user_data/: mod.rs
src/user_state/: mod.rs
