[package]
name = "supabar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "crawl"
path = "src/bin/crawl.rs"

[[bin]]
name = "cmd"
path = "src/bin/cmd.rs"

[dependencies]
anyhow = "1.0.57"
gio = "0.15.11"
lazy_static = "1.4.0"
notify = "4.0.17"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
standard_paths = "1.1.0"
tantivy = "0.17.0"
thiserror = "1.0.31"
turbosql = "0.5.0"
whoami = "1.2.1"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
tokio = { version = "1.18.2", features = ["full"] }
walkdir = "2.3.2"
tree_magic_mini = "3.0.3"
mime = "0.3.16"
async-trait = "0.1.53"
chrono = "0.4.19"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
