cargo-features = ["workspace-inheritance"]

[workspace]
members = [
    "crates/core",
    "crates/store",
    "crates/indexers",
    "crates/contracts",
    "apps/supabar"
]

[workspace.package]
version = "0.1.0"
description = "The last launch bar"
authors = ["Pedro Gabriel Planel"]
edition = "2021"
include = [
    "apps/supabar/**/**",
    "examples/**/**",
]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
int-enum = "0.4.0"
once_cell = "1.10.0"
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.53"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.81"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-futures = "0"
tracing-flame = "0"
lazy_static = "1.4.0"
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
pallet = "0.7.0"
sled = "0.34.7"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "7b103ca7e422d2d5a8935818407fc0023f1b3ab8" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "7b103ca7e422d2d5a8935818407fc0023f1b3ab8" }


[package]
name = "supabar"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
include.workspace = true

[dependencies]
core = { path = "crates/core" }
tokio = { version = "1.18.2", features = ["full"] }
tracing-subscriber = "0.3.11"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
anyhow = "1.0.57"
prisma-client-rust-cli.workspace = true

[[example]]
name = "cmd"
path = "examples/cmd.rs"

[[example]]
name = "hint"
path = "examples/hint.rs"
