[workspace]
resolver="2"
members = [
    "crates/core",
    "crates/store",
    "crates/indexers",
    "crates/contracts",
    "apps/supabar"
]

[package]
name = "supabar"
version = "0.1.0"
include = [
    "apps/supabar/**/**",
    "examples/**/**",
]
license = "MIT OR Apache-2.0"

[workspace.package]
description = "The last launch bar"
authors = ["Pedro Gabriel Planel"]
edition = "2021"

[workspace.dependencies]
int-enum = "0.5.0"
once_cell = "1.10.0"
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.53"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.81"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-futures = "0"
tracing-flame = "0"
lazy_static = "1.4.0"
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
pallet = "0.7.0"
sled = "0.34.7"

[[example]]
name = "cmd"
path = "examples/cmd.rs"

[[example]]
name = "hint"
path = "examples/hint.rs"
