cargo-features = ["workspace-inheritance"]

[package]
name = "supabar_app"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "0.1.0", path = "../../crates/core" }
anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
