[package]
name = "supabar_app"
version = "0.0.1"
description.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../crates/core" }
anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
