[package]
name = "contracts"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "1.0.0"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
serde.workspace = true
pallet.workspace = true
async-trait.workspace =true
int-enum.workspace = true
chrono.workspace = true
thiserror.workspace = true
