cargo-features = ["workspace-inheritance"]
[package]
name = "core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
store = { path = "../store" }
gio = "0.15.11"
standard_paths = "1.1.0"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
whoami = "1.2.1"
toml = "0.5.9"
int-enum = "0.4.0"
once_cell.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true
tracing-flame .workspace = true
lazy_static.workspace = true
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
