cargo-features = ["workspace-inheritance"]
[package]
name = "core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
indexers = { path="../indexers"}
contracts = { path = "../contracts" }
store = { path = "../store" }
prisma-client-rust-cli.workspace = true
prisma-client-rust.workspace = true
gio = "0.15.11"
standard_paths = "1.1.0"
whoami = "1.2.1"
toml = "0.5.9"
int-enum.workspace = true
once_cell.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true
tracing-flame .workspace = true
lazy_static.workspace = true
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
bigdecimal = "0.3.0"
hostname = "0.3.1"
home = "0.5.3"
jwalk = "0.6.0"
rayon = "1.5.3"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[[bin]]
name = "prisma"
path = "src/bin/prisma.rs"
