[package]
name = "core"
version = "0.0.1"
description.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
indexers = { path="../indexers"}
application= {path = "../indexers/application"}
contracts = { path = "../contracts" }
store = { path = "../store" }
whoami = "1.2.1"
toml = "0.8.8"
int-enum.workspace = true
once_cell.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true
tracing-flame .workspace = true
lazy_static.workspace = true
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
bigdecimal = "0.4.2"
hostname = "0.3.1"
home = "0.5.3"
jwalk = "0.8.1"
rayon = "1.5.3"
etcetera = "0.8.0"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
