[package]
name = "store"
version = "0.0.1"
description.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
walkdir = "2.3.2"
indexers = { path = "../indexers" }
contracts = { path = "../contracts" }
anyhow.workspace = true
pallet.workspace = true
serde.workspace = true
sled.workspace =true
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
