cargo-features = ["workspace-inheritance"]
[package]
name = "csv_indexer"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
contracts = { path = "../../contracts" }
anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true
csv = "1.1.6"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "csv_benchmark"
harness = false
