
[package]
name = "exif_indexer"
version = "0.0.1"
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../../contracts" }

anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true
lazy_static.workspace = true
kamadak-exif = "0.5.4"
reverse_geocoder = "3"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "exif_benchmark"
harness = false
