
[package]
name = "mobile_net_v2_indexer"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../../contracts" }

anyhow.workspace =true
tracing.workspace =true
once_cell.workspace = true
tokio.workspace = true
image = "0.24.2"
tract-tensorflow = "0.16.7"
tract-core = "0.16.7"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "mobile_net_v2_benchmark"
harness = false
