cargo-features = ["workspace-inheritance"]
[package]
name = "pdf_indexer"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../../contracts" }
anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true
regex = "1"
lopdf = "0.27.0"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "pdf_benchmark"
harness = false
