
[package]
name = "pdf_indexer"
version = "0.0.1"
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../../contracts" }
anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true
regex = "1"
lopdf = "0.27.0"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "pdf_benchmark"
harness = false
