cargo-features = ["workspace-inheritance"]
[package]
name = "pptx_indexer"
version = "0.1.0"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[dependencies]
contracts = { path = "../../contracts" }

anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true
msoffice_pptx = "0.2.1"
msoffice_shared = "0.1.1"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "pptx_benchmark"
harness = false
