
[package]
name = "pptx_indexer"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../../contracts" }

anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true
msoffice_pptx = "0.2.1"
msoffice_shared = "0.1.1"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "pptx_benchmark"
harness = false
