cargo-features = ["workspace-inheritance"]
[package]
name = "spreadsheet_indexer"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../../contracts" }
calamine = "0.18"
anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true
[dev-dependencies]
criterion = "0"

[[bench]]
name = "spreadsheet_benchmark"
harness = false
