[package]
name = "text_indexer"
version = "0.0.1"
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../../contracts" }
anyhow.workspace =true
tracing.workspace =true
tokio.workspace = true

[dev-dependencies]
criterion = "0"

[[bench]]
name = "text_benchmark"
harness = false
